--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -43,6 +43,24 @@ nav {
   justify-content: flex-end;
 }
 
-.album-cover {
-  width: 33%;
+@media (max-width: 512px) {
+  .album-header {
+    h4 {
+      font-size: 1.25rem;
+    }
+    h6 {
+      font-size: 1rem;
+    }
+  }
+}
+
+@media (min-width: 512px) and (max-width: 762px) {
+  .album-header {
+    h4 {
+      font-size: 1.5rem;
+    }
+    h6 {
+      font-size: 1.25rem;
+    }
+  }
 }
