top tracks redesign changes

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -5,7 +5,7 @@
   --black: #000000;
   --bg-secondary: #282828;
   --text-primary: #ffffff;
-  --text-secondary: ##b3b3b3;
+  --text-secondary: #b3b3b3;
   --bg-blue: #2941ab;
   font-size: 14px;
   font-family: 'Montserrat', sans-serif;
@@ -21,9 +21,11 @@ $black: 900;
 
 body {
   font-family: 'Montserrat', sans-serif;
-  font-weight: 400;
+  font-weight: $normal;
   margin: 0;
   padding: 0;
+  background: var(--bg-primary);
+  color: var(--text-primary);
 }
 
 html {
@@ -62,7 +64,7 @@ nav {
   padding: 0.5rem 0;
   .nav {
     color: var(--text-primary);
-    max-width: 950px;
+    max-width: 1200px;
     margin: 0 auto;
     display: flex;
     align-items: center;
@@ -203,6 +205,76 @@ nav {
     padding: 0.5rem 1rem;
     .account {
       border-left: 0;
+    }
+  }
+}
+
+.container {
+  max-width: 1200px;
+  margin: 0 auto;
+}
+
+.table {
+  margin-top: 1rem;
+  color: var(--text-secondary);
+  font-weight: $medium;
+  .table__row {
+    padding: 0.5rem 1rem;
+    border-radius: 0.5rem;
+    display: grid;
+    grid-template-columns: 30px 75px 480px 505px 10px;
+    div {
+      display: flex;
+      align-items: center;
+    }
+    &:hover {
+      background-color: var(--bg-secondary);
+    }
+  }
+  .table__header {
+    display: grid;
+    grid-template-columns: 110px 490px 500px auto 10px;
+    padding-bottom: 0.5rem;
+    border-bottom: 1px solid #b3b3b34b;
+  }
+  .table__index {
+    font-weight: $semibold;
+    color: var(--text-secondary);
+  }
+  .table__credits {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: flex-start !important;
+  }
+  .title {
+    font-size: 1.25rem;
+    color: var(--text-primary);
+  }
+}
+
+@media (max-width: 520px) {
+  .table {
+    .table__row {
+      grid-template-columns: 0.2fr 1fr 0.1fr;
+      grid-gap: 1rem;
+    }
+    .table__header {
+      grid-template-columns: 1fr 0.2fr;
+      margin: 0 1rem;
+    }
+    .table__album,
+    .table__index {
+      display: none !important;
+    }
+    .header__album,
+    .header__index {
+      display: none;
+    }
+    margin: 1rem 0.5rem;
+    font-size: 0.9rem;
+    .title {
+      font-size: 1rem;
     }
   }
 }
