table grid fixes

--- a/src/styles/Styles.global.scss
+++ b/src/styles/Styles.global.scss
@@ -5,6 +5,10 @@
   font-family: 'Montserrat', sans-serif;
 }
 
+*, *::before, *::after {
+  box-sizing: inherit;
+}
+
 
 body {
   font-family: 'Montserrat', sans-serif;
