--- a/src/styles/Navbar.module.scss
+++ b/src/styles/Navbar.module.scss
@@ -5,6 +5,7 @@ $black: #000000;
 .navWrapper {
   background: $black;
   padding: 0.5rem 0;
+  width: 100%;
   .nav {
     color: $text-primary;
     max-width: 1200px;
