--- a/src/styles/Tracks.module.scss
+++ b/src/styles/Tracks.module.scss
@@ -24,7 +24,7 @@
     padding: 0.5rem 2rem;
     grid-template-columns: 30px 80px 0.5fr 0.5fr 30px;
     padding-bottom: 0.5rem;
-    border-bottom: 1px solid #b3b3b34b;
+    border-bottom: 1px solid $gray;
     text-transform: uppercase;
   }
   .table__index {
