--- a/src/styles/Styles.global.scss
+++ b/src/styles/Styles.global.scss
@@ -43,6 +43,13 @@ h1 {
   z-index: 10;
 }
 
+.overlay {
+  position: absolute;
+  width: 100%;
+  height: 30vh;
+  z-index: -1;
+}
+
 @media (min-width: 520px) and (max-width: 760px) {
   .modal {
     @include center-width(520px);
@@ -100,7 +107,7 @@ h1 {
   padding: 0.5rem 1rem;
   border-radius: 10rem;
   white-space: nowrap;
-  border: 1px solid $gray;
+  border: 1px solid $text-secondary;
 }
 
 .playlist-modal {
