--- a/src/styles/Footer.module.scss
+++ b/src/styles/Footer.module.scss
@@ -13,6 +13,9 @@ $black: #000000;
   div {
     padding: 1rem;
   }
+  h2 {
+    margin-left: 1rem;
+  }
   p {
     color: $text-secondary;
     a {
