--- a/src/styles/Tracks.module.scss
+++ b/src/styles/Tracks.module.scss
@@ -50,6 +50,14 @@
     font-size: 1.25rem;
     color: $text-primary;
   }
+  .explicit {
+    background: $text-secondary;
+    color: $bg-primary;
+    border-radius: 3px;
+    padding: 0.1rem 0.35rem;
+    font-size: 0.6rem;
+    margin-right: 0.25rem;
+  }
 }
 
 @media (max-width: 520px) {
