--- a/src/styles/Tracks.module.scss
+++ b/src/styles/Tracks.module.scss
@@ -4,7 +4,7 @@
   padding-top: 10rem;
   padding-bottom: 1rem;
   padding-left: 1rem;
-  font-size: 4rem;
+  font-size: 7rem;
   max-width: 1200px;
   margin: 0 auto;
 }
@@ -61,6 +61,9 @@
 }
 
 @media (max-width: 520px) {
+  .pageTitle {
+    font-size: 3rem;
+  }
   .table {
     .table__row {
       grid-template-columns: 50px 1fr 30px;
