fixed followers count format and button font, changed nav opacity

--- a/src/styles/Landing.module.scss
+++ b/src/styles/Landing.module.scss
@@ -11,10 +11,12 @@
   background: $bg-blue;
   h1 {
     font-size: 6rem;
+    line-height: 6rem;
   }
   p {
     font-size: 1.25rem;
     font-weight: $medium;
+    line-height: 2rem;
   }
   .btn {
     color: $bg-blue;
