--- a/src/styles/Tracks.module.scss
+++ b/src/styles/Tracks.module.scss
@@ -29,6 +29,7 @@
     display: flex;
     justify-content: center;
     span {
+      box-shadow: 0 0 4rem 0 #00000088;
       position: relative;
       .wave__top {
         position: absolute;
