--- a/src/styles/Styles.global.scss
+++ b/src/styles/Styles.global.scss
@@ -67,6 +67,19 @@ html {
   box-sizing: border-box;
 }
 
+#nprogress  {
+  .bar {
+    background: $green !important;
+  }
+  .spinner-icon {
+    border-top-color: $green !important;
+    border-left-color: $green !important;
+  }
+  .peg {
+    box-shadow: 0 0 10px $green, 0 0 5px $light-green !important;
+  }
+}
+
 h1,
 h2 {
   font-weight: $black;
