--- a/src/styles/Artists.module.scss
+++ b/src/styles/Artists.module.scss
@@ -1,12 +1,88 @@
 @import './variables';
 
 .pageTitle {
+  font-size: 7rem;
+  margin: 0;
+}
+
+.header {
   padding-top: 10rem;
   padding-bottom: 1rem;
-  padding-left: 1rem;
-  font-size: 7rem;
   max-width: 1200px;
   margin: 0 auto;
+  display: flex;
+  &__text {
+    h5 {
+      text-transform: uppercase;
+    }
+    margin-left: 2rem;
+    p {
+      color: $text-secondary;
+      font-weight: $medium;
+    }
+  }
+  &__username {
+    color: $text-primary;
+    font-weight: $bold;
+  }
+  &__image {
+    display: flex;
+    justify-content: center;
+    span {
+      box-shadow: 0 0 4rem 0 #00000088;
+      position: relative;
+      .wave__top {
+        position: absolute;
+        bottom: 197.44px;
+        z-index: 1;
+        width: 100%;
+        margin: 0;
+        filter: invert(100%);
+      }
+      .wave__bottom {
+        position: absolute;
+        bottom: 30px;
+        width: 100%;
+        margin: 0;
+        filter: invert(100%);
+      }
+      .wave__cover {
+        position: absolute;
+        width: 100%;
+        height: 33.515626px;
+        bottom: 0;
+        opacity: 0.9;
+        filter: invert(100%);
+      }
+    }
+  }
+  &__container {
+    display: flex;
+    flex-direction: column;
+    div {
+      height: 125px;
+    }
+  }
+}
+
+.dot {
+  height: 4px;
+  width: 4px;
+  background-color: $text-secondary;
+  border-radius: 50%;
+  margin: 0.2rem 0.25rem;
+  display: inline-flex;
+  align-items: center;
+}
+
+.wave__title {
+  position: absolute;
+  bottom: 20px;
+  left: 20px;
+  margin: 0;
+  font-size: 1.75rem;
+  font-weight: $black;
+  color: black;
 }
 
 .table {
@@ -55,6 +131,27 @@
 }
 
 @media (max-width: 520px) {
+  .header {
+    flex-direction: column;
+    &__text {
+      margin-left: 1rem;
+      h1,
+      h5 {
+        display: none;
+      }
+      p {
+        color: $text-secondary;
+        font-weight: $medium;
+      }
+    }
+    &__username {
+      color: $text-primary;
+      font-weight: $bold;
+    }
+    &__image {
+      margin-bottom: 2rem;
+    }
+  }
   .pageTitle {
     font-size: 3rem;
   }
