--- a/src/styles/Styles.global.scss
+++ b/src/styles/Styles.global.scss
@@ -208,6 +208,10 @@ h2 {
       transition: 0.25s;
     }
   }
+  .inputError {
+    border: 1px solid red;
+    background: rgba(255, 0, 0, 0.1);
+  }
   h2 {
     margin: 1rem 0;
   }
