--- a/src/styles/Artists.module.scss
+++ b/src/styles/Artists.module.scss
@@ -11,6 +11,9 @@
   max-width: 1200px;
   margin: 0 auto;
   display: flex;
+  img {
+    object-fit: cover;
+  }
   &__text {
     h5 {
       text-transform: uppercase;
@@ -89,6 +92,9 @@
   margin: 1rem;
   color: $text-secondary;
   font-weight: $medium;
+  img {
+    object-fit: cover;
+  }
   .table__row {
     padding: 0.5rem 2rem;
     border-radius: 0.5rem;
